# qrild

./: .clang-format  .gitignore  .push.settings.jsonc  Android.bp  README.md  android.hardware.radio.rc  android.hardware.radio.xml  meson.build  qrild.rc
_android/: qmi_dms.c  qmi_dms.h  qmi_dpm.c  qmi_dpm.h  qmi_nas.c  qmi_nas.h  qmi_uim.c  qmi_uim.h  qmi_wda.c  qmi_wda.h  qmi_wds.c  qmi_wds.h
libqril/: Android.bp  libqril.c  libqril_client.cc  libqril_events.c  libqril_events.h  libqril_messages.c  libqril_messages.h  libqril_private.h  libqril_qmi.c  libqril_services.c  libqril_services.h  list.h  lock_tracker.c  lock_tracker.h  meson.build  q_log.c  qmi_tlv.c  qrild.h  qrild_link.c.old  qrild_link.cc  qrild_link.h  qrild_msg.c  qrild_msg.h  qrild_qmi.c  qrild_qmi.h  timespec.c  timespec.h  util.c  util.h  workqueue.c  workqueue.h  workqueue_priv.h
libqril/examples/: get_card_status.c  meson.build  network_indications.c
libqril/lib/: libqril.h  libqril_client.hh  libqril_qmi.h  list.h  q_log.h  workqueue.h
libqril/old/: qrild_link.cc  qrild_qmi.c  qrild_qmi.h
libqril/qmi/: qril_dms.qmi  qril_dpm.qmi  qril_nas.qmi  qril_uim.qmi  qril_wda.qmi  qril_wds.qmi
libqril/utils/: gdb_quick
notes/: dev-notes.md  logs.md  netlink.md  uim_get_card_status.txt
qrild/: .clang-format  qrild.c  qrild_android.cc  qrild_android.h  qrild_android_config.cc  qrild_android_data.cc  qrild_android_interface.h  qrild_android_messaging.cc  qrild_android_modem.cc  qrild_android_network.cc  qrild_android_sim.cc  qrild_android_voice.cc  qrild_radio.hh  radio_responses_oops.h
src/: list.h  meson.build  qmi_dms.h  qmi_qrild_svc copy.c  qmi_tlv.c  qmi_tlv.h  qmi_uim.c  qmi_uim.h  qrild.c  qrild.h  qrild_link.c  qrild_link.h  qrild_msg.c  qrild_msg.h  qrild_qmi.c  qrild_qmi.h  qrild_qrtr.c  qrild_qrtr.h  util.c  util.h
src/qmi/: .gitignore  meson.build  qrild_dms.qmi  qrild_dpm.qmi  qrild_nas.qmi  qrild_uim.qmi  qrild_wda.qmi  qrild_wds.qmi
subprojects/libqril/: q_log.c  q_log.h  qmi_tlv.c  qmi_tlv.h.old  qrild.h  qrild_link.cc  qrild_link.h  qrild_msg.c  qrild_msg.h  qrild_qmi.c  qrild_qmi.h  util.c  util.h
subprojects/libqril/qmi/: qril_dms.qmi  qril_dpm.qmi  qril_nas.qmi  qril_uim.qmi  qril_wda.qmi  qril_wds.qmi
tools/: tlv_dump.c
